--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 *, *::before, *::after {
     padding: 0;
     margin: 0;
@@ -7,10 +9,11 @@
 
 body {
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
 }
 
 ::selection {
-    background-color: #bb34dc93;
+    background-color: #ffffff7e;
 }
 
 .logo {
@@ -114,4 +117,57 @@ main {
     left: 0;
     background: radial-gradient(ellipse at center, rgba(0,0,0,0) 65%, rgba(0,0,0,0.7));
     pointer-events: none;
+}
+
+header ul {
+    margin: 0;
+}
+
+.main-content {
+    padding: 2rem;
+}
+
+.meteo {
+    background-color: red;
+    border-radius: 1rem;
+    padding: 1.5rem;
+    color: #fff;
+    box-shadow: 0 20px 27px 0 rgba(0, 0, 0, .05);
+}
+
+.meteo h1 {
+    text-transform: uppercase;
+    font-weight: 500;
+}
+
+.meteo small {
+    font-size: 50%;
+}
+
+.meteo h2 {
+    font-size: 30px;
+}
+
+.row .iconTitle {
+    width: 3rem;
+    height: auto;
+}
+
+.main-content .title {
+    font-family: "Bebas Neue", sans-serif;
+}
+
+.main-content .iconP {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .5rem;
+}
+
+.main-content .iconP::after, .main-content .iconP::before {
+    content: "";
+    display: block;
+    background: #000;
+    width: 50px;
+    height: .01rem;
 }
