--- a/styles/style.css
+++ b/styles/style.css
@@ -127,8 +127,9 @@ header ul {
     padding: 2rem;
 }
 
-.meteo {
-    background-color: red;
+.allData .meteo {
+    background-image: url("../img/sky.jpg");
+    background-size: cover;
     border-radius: 1rem;
     padding: 1.5rem;
     color: #fff;
@@ -141,11 +142,11 @@ header ul {
 }
 
 .meteo small {
-    font-size: 50%;
+    font-size: 35%;
 }
 
 .meteo h2 {
-    font-size: 30px;
+    font-size: 50px;
 }
 
 .row .iconTitle {
@@ -170,4 +171,59 @@ header ul {
     background: #000;
     width: 50px;
     height: .01rem;
+}
+
+.prevMeteo {
+    display: flex;
+    justify-content: space-around;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+}
+
+.allData {
+    justify-content: space-evenly;
+}
+
+::-webkit-scrollbar {
+    width: 0;
+}
+
+.boxIcon {
+    border-radius: .5rem;
+    width: 48px;
+    height: 48px;
+    background-position: 50%;
+    background-image: linear-gradient(310deg, #2e3236, #23282d);
+    text-align: center !important;
+    box-shadow: 0 .3125rem .625rem 0 rgba(0, 0, 0, .12) !important;
+}
+
+.boxIcon img {
+    width: 100%;
+    height: auto;
+    padding: .5rem;
+    filter: invert(100%) sepia(5%) saturate(20%) hue-rotate(277deg) brightness(107%) contrast(100%);
+}
+
+.allData .card {
+    border-radius: 1rem;
+    border: 0;
+    box-shadow: 0 20px 27px 0 rgba(0, 0, 0, .05);
+}
+
+.data .row {
+    height: 100%;
+    align-items: center;
+}
+
+div.h1.temperature {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+div.h1.temperature span {
+    font-size: 5rem;
 }
