--- a/styles/style.responsive.css
+++ b/styles/style.responsive.css
@@ -52,3 +52,19 @@
         font-size: 2.6rem;
     }
 }
+
+@media (min-width: 576px) {
+  
+    header ul li {
+        padding: .5rem 1.5rem;
+    }
+
+}
+
+@media (min-width: 768px) {
+
+    .allData {
+        gap: initial;
+    }
+
+}
