--- a/styles/style.css
+++ b/styles/style.css
@@ -389,3 +389,68 @@ p:has(.more) {
 .scrollToTop img {
     filter: invert(11%) sepia(24%) saturate(414%) hue-rotate(169deg) brightness(91%) contrast(88%);
 }
+
+.second-content {
+    background-color: #f3f2f3;
+}
+
+.titleVignette {
+    background-color: #23282d;
+    color: #fff;
+    display: inline-block;
+    font-weight: 400;
+    padding: .25rem 2rem;
+    padding-left: 400px;
+    transform: translate(-290px, -50%);
+    font-size: 2rem;
+    text-transform: uppercase;
+    border-radius: .5rem;
+    font-family: 'Poppins', sans-serif;
+}
+
+footer img {
+    width: 100%;
+    object-fit: cover;
+}
+
+footer .content-footer {
+    background-color: #23282d;
+}
+
+footer .content-footer p {
+    text-align: center;
+}
+
+footer .content-footer .copyright {
+    padding-bottom: 1rem;
+    color: #fff;
+    margin: 0;
+}
+
+footer .content-footer .lienFooter {
+    padding-top: 1rem;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+footer .content-footer .lienFooter a {
+    border: 1px solid #fff;
+    border-radius: 100%;
+    padding: .5rem;
+    display: flex;
+}
+
+footer .content-footer .lienFooter a:hover {
+    background-color: #fff;
+}
+
+footer .content-footer .lienFooter a:hover img {
+    filter: invert(14%) sepia(14%) saturate(551%) hue-rotate(169deg) brightness(94%) contrast(94%);
+}
+
+footer .content-footer .lienFooter img {
+    width: 20px;
+    height: 20px;
+    filter: invert(92%) sepia(37%) saturate(2%) hue-rotate(215deg) brightness(107%) contrast(100%);
+}
