--- a/styles/style.responsive.css
+++ b/styles/style.responsive.css
@@ -75,7 +75,7 @@
         font-size: 2rem;
     }
 
-    .imgParallax.Miami {
+    .imgParallax {
         background-attachment: fixed;
         height: 350px;
     }
