add background page Paris

--- a/styles/style.css
+++ b/styles/style.css
@@ -51,6 +51,7 @@ header ul a {
     color: #f8f9fa;
     text-transform: uppercase;
     font-size: 1rem;
+    border: 1px solid transparent;
     padding: .5rem;
 }
 
@@ -71,6 +72,16 @@ main {
     width: 194.44%;
     transform: translate(-50%, -50%);
     top: 1.86%;
+    left: 50.69%;
+    z-index: 1;
+    pointer-events: none;
+}
+
+.backgroundFilterParis {
+    position: absolute;
+    width: 140%;
+    transform: translate(-50%, -50%);
+    top: 17%;
     left: 50.69%;
     z-index: 1;
     pointer-events: none;
@@ -107,6 +118,16 @@ main {
     position: absolute;
     width: 129.16%;
     top: 56.79%;
+    left: 50%;
+    z-index: 3;
+    pointer-events: none;
+    transform: translate(-50%, 100vh);
+}
+
+.parisBgFilter {
+    position: absolute;
+    width: 121%;
+    top: 45%;
     left: 50%;
     z-index: 3;
     pointer-events: none;
