--- a/styles/style.css
+++ b/styles/style.css
@@ -521,3 +521,42 @@ footer {
 header nav.navAccueil ul a {
     color: #f8f9fa;
 }
+
+div.accueilContent svg a.link path {
+    fill: #199f1b;
+}
+
+div.accueilContent svg a.link:hover path {
+    fill: #6bff6d;
+}
+
+div.accueilContent svg path {
+    fill: #23282D;
+    stroke: #f8f9fa;
+    stroke-width: .25;
+}
+
+div.accueilContent svg path:hover {
+    fill: #555a5f;
+    transition: 0.6s;
+    cursor: pointer;
+}
+
+div.accueilContent svg {
+    width: 90%;
+}
+
+header.headerHome {
+    position: sticky;
+}
+
+div.accueilContent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+div.accueilContent h1 {
+    font-family: "Bebas Neue", sans-serif;
+    padding-top: 2rem;
+}
