--- a/styles/load.css
+++ b/styles/load.css
@@ -1,72 +1,123 @@
 /*
-    Crédit : https://codepen.io/jamesfinn180/pen/VwzENbR
+    Crédit for Globe : https://codepen.io/jamesfinn180/pen/VwzENbR
 */
+
+body {
+    margin: 0;
+}
+
+body:not(:has(.loadPage.hidden)) {
+    overflow: hidden;
+}
+
+.loadPage.hidden {
+    display: none;
+}
+
+.loadPage {
+    z-index: 10000;
+    background-color: #f8f9fa;
+    align-items: center;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2rem;
+    margin: 0 0;
+    overflow: hidden;
+    position: absolute;
+    width: 100%;
+}
 
 .planet-container {
     border-radius: 50%;
     box-shadow: 5px -3px 10px 3px #bcbcbc;
-    height: 200px;
+    height: 170px;
     overflow: hidden;
     position: relative;
-    width: 200px;
+    width: 170px;
     z-index: 1;
 }
 .night {
     animation: rotate-night 80s linear infinite;
-    background-image: url(https://www.solarsystemscope.com/textures/download/2k_earth_nightmap.jpg);
+    background-image: url(../img/globe/2k_earth_nightmap.jpg);
     background-size: 200%;
-    height: 200px;
+    height: 170px;
     position: absolute;
-    width: 200px;
+    width: 170px;
     z-index: 2;
 }
 .day {
     animation: rotate-day 80s linear infinite;
-    background-image: url(https://www.solarsystemscope.com/textures/download/2k_earth_daymap.jpg);
+    background-image: url(../img/globe/2k_earth_daymap.jpg);
     background-size: 200%;
     border-left: solid 1px black;
     border-radius: 50%;
     box-shadow: 5px 0 20px 10px #040615 inset; 
-    height: 200px;
+    height: 170px;
     margin-left: 30px;
     position: absolute;
-    width: 200px;
+    width: 170px;
     z-index: 3;
 }
 .clouds {
     animation: rotate-day 50s linear infinite, spin-clouds 100s ease infinite;
-    background-image: url(https://www.solarsystemscope.com/textures/download/2k_earth_clouds.jpg);
+    background-image: url(../img/globe/2k_earth_clouds.jpg);
     background-size: 200%;
     border-radius: 50%;    
     box-shadow: 5px 0 20px 10px #040615 inset, -9px 0px 20px 10px #5e90f1 inset;
-    height: 200px;
+    height: 170px;
     margin-left: 20px;
     opacity: 0.45;
     position: absolute;
-    width: 200px;
+    width: 170px;
     z-index: 4;
 }
 .inner-shadow {
     background: transparent;
     border-radius: 50%;
     box-shadow: -5px 0 10px 1px #152b57 inset, 5px 0 10px 1px #040615 inset;
-    height: 200px;
+    height: 170px;
     margin-left: 0;
     position: absolute;
-    width: 200px;
+    width: 170px;
     z-index: 5;
 }
 
-@keyframes rotate-day {
-    0% { background-position: 120% 0; }
-    100% { background-position: -80% 0; }
+.line-box {
+    width: 15%;
+    border: 2px solid #23282d;
+    border-radius: 20px;
 }
+
+.line {
+    height: 20px;
+    border-radius: 20px;
+    background-color: #23282d;
+    animation: loading 2s forwards cubic-bezier(0,0,0,0);
+}
+
+@keyframes rotate-day {
+    0% { background-position: 60% 0; }
+    100% { background-position: -140% 0; }
+}
+
 @keyframes rotate-night {
     0% { background-position: calc(120% + 120px) 0; }
     100% { background-position: calc(-80% + 120px) 0; }
 }
+
 @keyframes spin-clouds {
     0% { transform: rotate(0deg); }
     50% { transform: rotate(20deg); }
     100% { transform: rotate(0deg); }
+}
+
+@keyframes loading {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 100%;
+    }
 }
