add background home

--- a/styles/style.css
+++ b/styles/style.css
@@ -546,10 +546,6 @@ div.accueilContent svg {
     width: 90%;
 }
 
-header.headerHome {
-    position: sticky;
-}
-
 div.accueilContent {
     display: flex;
     flex-direction: column;
@@ -559,4 +555,54 @@ div.accueilContent {
 div.accueilContent h1 {
     font-family: "Bebas Neue", sans-serif;
     padding-top: 2rem;
+}
+
+div.backgroundHome {
+    width: 100%;
+    position: relative;
+}
+
+div.backgroundHome img {
+    max-height: 100vh;
+    object-fit: cover;
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+}
+
+div.backgroundHome div.contentBackground {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100%;
+}
+
+div.backgroundHome div.contentBackground {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+div.backgroundHome div.contentBackground h1, div.backgroundHome div.contentBackground p {
+    color: #f8f9fa;
+}
+
+div.backgroundHome div.contentBackground h1 {
+    font-size: 4rem;
+}
+
+div.backgroundHome div.contentBackground p {
+    font-size: 1.3rem;
+    font-family: "Bebas Neue", sans-serif;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+div.backgroundHome div.contentBackground p::after, div.backgroundHome div.contentBackground p::before {
+    content: "";
+    display: block;
+    background: #f8f9fa;
+    width: 50px;
+    height: .1rem;
 }
